test_files/netlist_connected/valid/valid_06.net
V1 in 0 5
L1 in mid 1m
L2 out 0 1m
K1 L1 L2 0.99
R1 mid 0 1k
R2 out mid 1k
.tran 1m
.backanno
.end
